Fix line chart centering and display issue (wrap with fixed-size container)

--- a/src/components/Charts/LineChart.sass
+++ b/src/components/Charts/LineChart.sass
@@ -1,6 +1,10 @@
-.container
+.wrapper
   width: 100%
   height: 100%
   display: flex
   align-items: center
   justify-content: center
+
+.container
+  width: 800px
+  height: 400px
